--- a/altX/Makefile.am
+++ b/altX/Makefile.am
@@ -19,6 +19,7 @@ altX_la_CPPFLAGS	= $(PYTHON_INCLUDES) $(CAIRO_CFLAGS) $(PYCAIRO_CFLAGS)
 altX_la_SOURCES   = altX.c
 
 
-canvasX_la_CPPFLAGS = $(PYTHON_INCLUDES)
 canvasX_la_LDFLAGS	= -module
+canvasX_la_LIBADD = $(X11_LIBS)
+canvasX_la_CPPFLAGS = $(PYTHON_INCLUDES)
 canvasX_la_SOURCES	= canvasX.c
