python specific changed and build script automation.

--- a/altX/debian/rules
+++ b/altX/debian/rules
@@ -28,7 +28,7 @@ endif
 config.status: configure
 	dh_testdir
 	# Add here commands to configure the package.
-	PYTHON=/usr/bin/python2.5 CFLAGS="$(CFLAGS)" ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info
+	PYTHON=/usr/bin/python2.5 CFLAGS="$(CFLAGS)" ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info  --libdir=/usr/lib/python2.5/site-packages
 
 configure:
 	./autogen.sh
