--- a/altX/src/Makefile.am
+++ b/altX/src/Makefile.am
@@ -1,22 +1,22 @@
 
 
-bin_PROGRAMS	= animX animGdk
+#bin_PROGRAMS	= animX animGdk
 
-animX_LDADD	= $(CAIRO_LIBS)
-animX_CPPFLAGS	= $(CAIRO_CFLAGS)
-animX_SOURCES	= animX.c
+#animX_LDADD	= $(CAIRO_LIBS)
+#animX_CPPFLAGS	= $(CAIRO_CFLAGS)
+#animX_SOURCES	= animX.c
 
-animGdk_LDADD	= $(GTK_LIBS) $(GTHREAD_LIBS)
-animGdk_CPPFLAGS= $(GTK_CFLAGS) $(GTHREAD_CFLAGS)
-animGdk_SOURCES	= animGdk.c
+#animGdk_LDADD	= $(GTK_LIBS) $(GTHREAD_LIBS)
+#animGdk_CPPFLAGS= $(GTK_CFLAGS) $(GTHREAD_CFLAGS)
+#animGdk_SOURCES	= animGdk.c
 
-lib_LTLIBRARIES     = altX.la canvasX.la
+#lib_LTLIBRARIES     = altX.la canvasX.la
+lib_LTLIBRARIES     = canvasX.la
 
-altX_la_LDFLAGS   = -module
-altX_la_LIBADD	= $(CAIRO_LIBS)
-altX_la_CPPFLAGS	= $(PYTHON_INCLUDES) $(CAIRO_CFLAGS) $(PYCAIRO_CFLAGS)
-#altX_la_CPPFLAGS	= -I/usr/local/include $(CAIRO_CFLAGS) $(PYCAIRO_CFLAGS)
-altX_la_SOURCES   = altX.c
+#altX_la_LDFLAGS   = -module
+#altX_la_LIBADD	= $(CAIRO_LIBS)
+#altX_la_CPPFLAGS	= $(PYTHON_INCLUDES) $(CAIRO_CFLAGS) $(PYCAIRO_CFLAGS)
+#altX_la_SOURCES   = altX.c
 
 
 canvasX_la_LDFLAGS	= -module
