Building deb packages for stackless.

--- a/altX/debian/control
+++ b/altX/debian/control
@@ -1,10 +1,10 @@
-Source: canvasx
+Source: stackless
 Section: user/office
 Priority: optional
 Maintainer: Jayesh Salvi <jayesh@altfrequency.com>
 Build-Depends: debhelper (>= 4.0.0) 
 Standards-Version: 3.6.0
 
-Package: canvasx
+Package: stackless 
 Architecture: armel
-Description: Python bindings for X for project AltCanvas
+Description: Stackless Python for Maemo
