--- a/altX/debian/control
+++ b/altX/debian/control
@@ -1,10 +1,10 @@
-Source: stackless
+Source: canvasx
 Section: user/office
 Priority: optional
 Maintainer: Jayesh Salvi <jayesh@altfrequency.com>
 Build-Depends: debhelper (>= 4.0.0) 
 Standards-Version: 3.6.0
 
-Package: stackless 
+Package: canvasx
 Architecture: armel
-Description: Stackless Python for Maemo
+Description: Python bindings for X for project AltCanvas
