--- a/altX/src/Makefile.am
+++ b/altX/src/Makefile.am
@@ -1,11 +1,15 @@
 
 
-bin_PROGRAMS	= animX 
+bin_PROGRAMS	= animX plainX
 #bin_PROGRAMS	= animX animGdk
 
 animX_LDADD	= $(CAIRO_LIBS) $(XEXT_LIBS)
 animX_CPPFLAGS	= $(CAIRO_CFLAGS) $(XEXT_CFLAGS)
 animX_SOURCES	= animX.c
+
+plainX_LDADD = $(X11_LIBS)
+plainX_CPPFLAGS = $(X11_INCLUDES)
+plainX_SOURCES = plainX.c
 
 #animGdk_LDADD	= $(GTK_LIBS) $(GTHREAD_LIBS)
 #animGdk_CPPFLAGS= $(GTK_CFLAGS) $(GTHREAD_CFLAGS)
