support for --with-efence.
fixed an erroneous free.

hooking up of mouse enter/leave routines of a button.

type, on_mouse_over props instead of transient flag.

--- a/libaltsvg/Makefile.am
+++ b/libaltsvg/Makefile.am
@@ -120,7 +120,7 @@ inkface_SOURCES = \
 	logic.c
 inkface_LDFLAGS = 
 inkface_DEPENDENCIES = $(DEPS)
-inkface_LDADD = $(GDK_X11_LIBS) $(LDADDS)
+inkface_LDADD = $(GDK_X11_LIBS) $(EFENCELIB) $(LDADDS)
 
 EXTRA_DIST =				\
 	MAINTAINERS			\
