--- a/libaltsvg/Makefile.in
+++ b/libaltsvg/Makefile.in
@@ -185,6 +185,7 @@ ECHO = @ECHO@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
+EFENCELIB = @EFENCELIB@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 F77 = @F77@
@@ -414,7 +415,7 @@ inkface_SOURCES = \
 
 inkface_LDFLAGS = 
 inkface_DEPENDENCIES = $(DEPS)
-inkface_LDADD = $(GDK_X11_LIBS) $(LDADDS)
+inkface_LDADD = $(GDK_X11_LIBS) $(EFENCELIB) $(LDADDS)
 EXTRA_DIST = \
 	MAINTAINERS			\
 	AUTHORS				\
