--- a/libaltsvg/tests/pdiff/Makefile.in
+++ b/libaltsvg/tests/pdiff/Makefile.in
@@ -96,6 +96,7 @@ ECHO = @ECHO@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
+EFENCELIB = @EFENCELIB@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 F77 = @F77@
