--- a/libaltsvg/Makefile.am
+++ b/libaltsvg/Makefile.am
@@ -7,7 +7,7 @@ endif
 SUBDIRS = . moz-plugin gdk-pixbuf-loader gtk-engine data tests doc
 
 lib_LTLIBRARIES = librsvg-2.la
-bin_PROGRAMS = rsvg-convert $(target_rsvg_view) inkface
+bin_PROGRAMS = rsvg-convert $(target_rsvg_view) keyboard
 noinst_PROGRAMS = test-performance
 
 man_MANS = rsvg.1
@@ -115,12 +115,19 @@ rsvg_view_LDFLAGS =
 rsvg_view_DEPENDENCIES = $(DEPS)
 rsvg_view_LDADD = $(GTK_LIBS) $(GDK_X11_LIBS) $(libm) $(LDADDS)
 
-inkface_SOURCES = \
-	inkface.c \
-	logic.c
-inkface_LDFLAGS = 
-inkface_DEPENDENCIES = $(DEPS)
-inkface_LDADD = $(GDK_X11_LIBS) $(EFENCELIB) $(LDADDS)
+#inkface_SOURCES = \
+#	inkface.c \
+#	logic.c
+#inkface_LDFLAGS = 
+#inkface_DEPENDENCIES = $(DEPS)
+#inkface_LDADD = $(GDK_X11_LIBS) $(EFENCELIB) $(LDADDS)
+
+keyboard_SOURCES = \
+	keyboard.c \
+	inkface.c 
+keyboard_LDFLAGS =
+keyboard_DEPENDENCIES = $(DEPS)
+keyboard_LDADD = $(GDK_X11_LIBS) $(EFENCELIB) $(LDADDS)
 
 EXTRA_DIST =				\
 	MAINTAINERS			\
