--- a/libaltsvg/Makefile.in
+++ b/libaltsvg/Makefile.in
@@ -36,7 +36,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-bin_PROGRAMS = rsvg-convert$(EXEEXT) $(am__EXEEXT_1) inkface$(EXEEXT)
+bin_PROGRAMS = rsvg-convert$(EXEEXT) $(am__EXEEXT_1) keyboard$(EXEEXT)
 noinst_PROGRAMS = test-performance$(EXEEXT)
 subdir = .
 DIST_COMMON = README $(am__configure_deps) $(librsvginc_HEADERS) \
@@ -86,13 +86,13 @@ librsvg_2_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 @HAVE_GTK_TRUE@am__EXEEXT_1 = rsvg-view$(EXEEXT)
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS) $(noinst_PROGRAMS)
-am_inkface_OBJECTS = inkface.$(OBJEXT) logic.$(OBJEXT)
-inkface_OBJECTS = $(am_inkface_OBJECTS)
+am_keyboard_OBJECTS = keyboard.$(OBJEXT) inkface.$(OBJEXT)
+keyboard_OBJECTS = $(am_keyboard_OBJECTS)
 am__DEPENDENCIES_2 = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(top_builddir)/librsvg-2.la
-inkface_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
-	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(inkface_LDFLAGS) \
+keyboard_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
+	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(keyboard_LDFLAGS) \
 	$(LDFLAGS) -o $@
 am_rsvg_convert_OBJECTS = rsvg-convert.$(OBJEXT)
 rsvg_convert_OBJECTS = $(am_rsvg_convert_OBJECTS)
@@ -123,10 +123,10 @@ CCLD = $(CC)
 LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = $(librsvg_2_la_SOURCES) $(inkface_SOURCES) \
+SOURCES = $(librsvg_2_la_SOURCES) $(keyboard_SOURCES) \
 	$(rsvg_convert_SOURCES) $(rsvg_view_SOURCES) \
 	$(test_performance_SOURCES)
-DIST_SOURCES = $(librsvg_2_la_SOURCES) $(inkface_SOURCES) \
+DIST_SOURCES = $(librsvg_2_la_SOURCES) $(keyboard_SOURCES) \
 	$(rsvg_convert_SOURCES) $(rsvg_view_SOURCES) \
 	$(test_performance_SOURCES)
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
@@ -409,13 +409,20 @@ rsvg_view_SOURCES = \
 rsvg_view_LDFLAGS = 
 rsvg_view_DEPENDENCIES = $(DEPS)
 rsvg_view_LDADD = $(GTK_LIBS) $(GDK_X11_LIBS) $(libm) $(LDADDS)
-inkface_SOURCES = \
-	inkface.c \
-	logic.c
 
-inkface_LDFLAGS = 
-inkface_DEPENDENCIES = $(DEPS)
-inkface_LDADD = $(GDK_X11_LIBS) $(EFENCELIB) $(LDADDS)
+#inkface_SOURCES = \
+#	inkface.c \
+#	logic.c
+#inkface_LDFLAGS = 
+#inkface_DEPENDENCIES = $(DEPS)
+#inkface_LDADD = $(GDK_X11_LIBS) $(EFENCELIB) $(LDADDS)
+keyboard_SOURCES = \
+	keyboard.c \
+	inkface.c 
+
+keyboard_LDFLAGS = 
+keyboard_DEPENDENCIES = $(DEPS)
+keyboard_LDADD = $(GDK_X11_LIBS) $(EFENCELIB) $(LDADDS)
 EXTRA_DIST = \
 	MAINTAINERS			\
 	AUTHORS				\
@@ -570,9 +577,9 @@ clean-noinstPROGRAMS:
 	  echo " rm -f $$p $$f"; \
 	  rm -f $$p $$f ; \
 	done
-inkface$(EXEEXT): $(inkface_OBJECTS) $(inkface_DEPENDENCIES) 
-	@rm -f inkface$(EXEEXT)
-	$(inkface_LINK) $(inkface_OBJECTS) $(inkface_LDADD) $(LIBS)
+keyboard$(EXEEXT): $(keyboard_OBJECTS) $(keyboard_DEPENDENCIES) 
+	@rm -f keyboard$(EXEEXT)
+	$(keyboard_LINK) $(keyboard_OBJECTS) $(keyboard_LDADD) $(LIBS)
 rsvg-convert$(EXEEXT): $(rsvg_convert_OBJECTS) $(rsvg_convert_DEPENDENCIES) 
 	@rm -f rsvg-convert$(EXEEXT)
 	$(rsvg_convert_LINK) $(rsvg_convert_OBJECTS) $(rsvg_convert_LDADD) $(LIBS)
@@ -609,9 +616,9 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/inkface.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/keyboard.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/librsvg-enum-types.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/librsvg-features.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/logic.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rsvg-affine.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rsvg-base-file-util.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/rsvg-base.Plo@am__quote@
