Got the package building for Maemo.

--- a/libaltsvg/data/Makefile.am
+++ b/libaltsvg/data/Makefile.am
@@ -1,6 +1,9 @@
 pixmapdir = $(datadir)/pixmaps
-pixmap_DATA = svg-viewer.svg
+pixmap_DATA = svg-viewer.svg keyboard-formal.svg keyboard-playfull.svg keyboard-elegant.svg music-player-auditorium.svg music-player-sunset.svg autumn.png sunset.png dido.png jem.png corrs.png
+
+desktopentrydir = $(datadir)/applications/hildon
+desktopentry_DATA = inkface.desktop
 
 EXTRA_DIST = \
-	$(pixmap_DATA)
+	$(pixmap_DATA) $(desktopentry_DATA)
 	
