--- a/libaltsvg/debian/rules
+++ b/libaltsvg/debian/rules
@@ -14,7 +14,7 @@ DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
 
 CFLAGS = -Wall -g -DHAS_XSP
-PACKAGENAME = canvasx 
+PACKAGENAME = inkfacedemo 
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
@@ -61,6 +61,7 @@ install: build
 	# Add here commands to install the package into debian/tmp
 	#$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp/var/lib/install
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
+	cp inkface-demo.py $(CURDIR)/debian/tmp/usr/bin
 
 
 # Build architecture-independent files here.
