cleanup autotools files that should not be in repository.

--- a/libaltsvg/data/Makefile.am
+++ b/libaltsvg/data/Makefile.am
@@ -1,5 +1,5 @@
 pixmapdir = $(datadir)/pixmaps
-pixmap_DATA = svg-viewer.svg keyboard-formal.svg keyboard-playfull.svg keyboard-elegant.svg music-player-auditorium.svg music-player-sunset.svg autumn.png sunset.png dido.png jem.png corrs.png
+pixmap_DATA = 
 
 desktopentrydir = $(datadir)/applications/hildon
 desktopentry_DATA = inkface.desktop
