--- a/libaltsvg/librsvg-2.0.pc.in
+++ b/libaltsvg/librsvg-2.0.pc.in
@@ -3,10 +3,10 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: librsvg
-Description: library that renders svg files
+Name: libaltsvg
+Description: modified librsvg to render SVG elements
 Version: @VERSION@
 Requires: glib-2.0 gdk-pixbuf-2.0 cairo
 Requires.private
-Libs: -L${libdir} -lrsvg-2
-Cflags: -I${includedir}/librsvg-2
+Libs: -L${libdir} -laltsvg
+Cflags: -I${includedir}/libaltsvg
