--- a/libaltsvg/data/inkface.desktop
+++ b/libaltsvg/data/inkface.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=0.0.1
 Encoding=UTF-8
-Name=Inkface-Demo
-Exec=/usr/bin/inkface-demo.py
+Name=Survey-inkface
+Exec=/usr/bin/survey
 Type=Application
