--- a/libaltsvg/gdk-pixbuf-loader/Makefile.am
+++ b/libaltsvg/gdk-pixbuf-loader/Makefile.am
@@ -21,7 +21,7 @@ endif
 svg_loader_la_SOURCES = io-svg.c
 svg_loader_la_LDFLAGS = -avoid-version -module $(no_undefined)
 svg_loader_la_LIBADD = \
-	$(top_builddir)/librsvg-2.la	\
+	$(top_builddir)/libaltsvg.la	\
 	$(LIBRSVG_LIBS) 	\
 	$(LIBGNOME_VFS_LIBS)		\
 	$(LIBGSF_LIBS) $(LIBCROCO_LIBS)
