--- a/inkface/src/SConscript
+++ b/inkface/src/SConscript
@@ -1,1 +1,14 @@
-SharedLibrary(target='inkface',source=['inkface.c'],CCFLAGS='-I/usr/include/libaltsvg -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/cairo -I/usr/include/freetype2 -I/usr/include/libpng12 -I/usr/include/gtk-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include')
+
+
+env = Environment()
+conf = Configure(env)
+if not conf.CheckLib('altsvg'):
+    print "Didn't find libaltsvg"
+    Exit(1)
+env = conf.Finish()
+
+env.ParseConfig("pkg-config --cflags --libs libaltsvg")
+
+env.SharedLibrary(target='inkface',
+                source=['inkface.c'])
+                
