--- a/inkface/debian/SConscript
+++ b/inkface/debian/SConscript
@@ -1,43 +1,68 @@
 
 import os
-import shutil
 
-SRCDIR = os.environ['PWD']
-PKGDIR = os.path.join(SRCDIR,'debian','tmp')
-CONTROL_SRC = os.path.join(SRCDIR,'debian','control')
-CONTROL_DEST = os.path.join(PKGDIR,'DEBIAN','control')
+Import('VERSION ARCH MAINTAINER DEPENDS DESCRIPTION PKGNAME')
+Import('env')
+
+svn_version = os.popen('svnversion ..').read()[:-1]
+# This may be as simple as '89' or as complex as '4123:4184M'.
+# We'll just use the last bit.
+svn_version = svn_version.split(':')[-1]
+
+
+debpkg = '#%s_%s_%s.deb'%('inkface',VERSION,ARCH)
 
 DEBFILES = [
-    ("usr/lib/libinkface.so", "src/libinkface.so"),
-    ("usr/include/inkface.h", "src/inkface.h"),
-    ("usr/lib/pkgconfig/inkface.pc","src/inkface.pc"),
+    ("usr/lib/libinkface.so", "#src/libinkface.so"),
+    ("usr/include/inkface.h", "#src/inkface.h"),
+    ("usr/lib/pkgconfig/inkface.pc","#src/inkface.pc"),
 ]
 
-shutil.rmtree(PKGDIR)
-os.mkdir(PKGDIR)
+PKGDIR = 'tmpdeb'
+
+DEBCONTROLFILE = os.path.join(PKGDIR, "DEBIAN/control")
 
 for f in DEBFILES:
+
     dest = os.path.join(PKGDIR,f[0])
-    src = os.path.join(SRCDIR,f[1])
 
-    # If the destination directory doesn't exit, create it
-    dest_dir = '/'.join(dest.split('/')[:-1])
-    if not os.path.exists(dest_dir):
-        os.makedirs(dest_dir)
+    env.Depends(debpkg,dest)
 
-    print 'Deploying '+src
-    shutil.copyfile(src,dest)
+    env.Command(dest,f[1],Copy('$TARGET','$SOURCE'))
+
+    env.Depends(DEBCONTROLFILE, dest)
 
 
-os.mkdir(PKGDIR+'/'+'DEBIAN')
+CONTROL_TEMPLATE = """
+Package: %s
+Priority: extra
+Section: misc
+Installed-Size: %s
+Maintainer: %s
+Architecture: %s
+Version: %s-%s
+Depends: %s
+Description: %s
 
-shutil.copyfile(CONTROL_SRC,CONTROL_DEST)
-                
-sin,soe = os.popen4('dpkg-deb --build tmp')
-    
-if not os.path.exists(os.path.join(SRCDIR,'debian','tmp.deb')):
-    print 'Debian package build failed'
-    Exit()
+"""
+env.Depends(debpkg,DEBCONTROLFILE )
 
-shutil.copyfile(os.path.join(SRCDIR,'debian','tmp.deb'),
-                os.path.join(SRCDIR,'inkface.deb'))
+# This function creates the control file from the template and info
+# specified above, and works out the final size of the package.
+def make_control(target=None, source=None, env=None):
+    installed_size = 0
+    for i in DEBFILES:
+        installed_size += os.stat(str(env.File(i[1])))[6]
+        control_info = CONTROL_TEMPLATE % (
+            PKGNAME, installed_size, MAINTAINER, ARCH, VERSION,
+            svn_version, DEPENDS, DESCRIPTION)
+        f = open(str(target[0]), 'w')
+        f.write(control_info)
+        f.close()
+
+env.Command(DEBCONTROLFILE, None, make_control)
+
+env.Command(debpkg, DEBCONTROLFILE,
+            "dpkg-deb -b %s %s"%(PKGDIR,"$TARGET"))
+
+Delete(PKGDIR)
