--- a/inkface/src/SConscript
+++ b/inkface/src/SConscript
@@ -3,16 +3,6 @@
 env = Environment()
 
 
-# Get our configuration options:
-opts = Options('wm.conf') # Change wm to the name of your app
-opts.Add(PathOption('PREFIX', 'Directory to install under', '/usr'))
-opts.Update(env)
-opts.Save('wm.conf', env) # Save, so user doesn't have to 
-                          # specify PREFIX every time
-
-Help(opts.GenerateHelpText(env))
-
-
 # Configuration
 conf = Configure(env)
 if not conf.CheckLib('altsvg'):
@@ -28,6 +18,18 @@ env.SharedLibrary(target='inkface',
                 source=['inkface.c'])
                 
 
+# Get our configuration options:
+opts = Options('wm.conf') # Change wm to the name of your app
+opts.Add(PathOption('PREFIX', 'Directory to install under', '/usr'))
+opts.Update(env)
+opts.Save('wm.conf', env) # Save, so user doesn't have to 
+                          # specify PREFIX every time
+
+Help(opts.GenerateHelpText(env))
+
+
+
+
 # Install
 # Here are our installation paths:
 idir_prefix = '$PREFIX'
@@ -39,7 +41,6 @@ Export('env idir_prefix idir_lib idir_bin idir_inc idir_data')
 
 env.Install(idir_lib, ['libinkface.so'])
 env.Install(idir_inc, ['inkface.h'])
-env.Alias('install', idir_prefix)
-
+install = env.Alias('install', idir_prefix)
 
 
