should have gone in last one

--- a/inkface/SConstruct
+++ b/inkface/SConstruct
@@ -13,10 +13,10 @@ PKGNAME = 'libinkface'
 
 Export('VERSION ARCH MAINTAINER DEPENDS DESCRIPTION PKGNAME')
 
-
 SConscript('src/lib.sc')
+
 SConscript('src/python.sc')
 
-if 'debian' in COMMAND_LINE_TARGETS:
+if 'debian' in COMMAND_LINE_TARGETS or 'all' in COMMAND_LINE_TARGETS:
     SConscript('debian/SConscript')
 
