--- a/libaltsvg/libaltsvg.pc.in
+++ b/libaltsvg/libaltsvg.pc.in
@@ -6,7 +6,7 @@ includedir=@includedir@
 Name: libaltsvg
 Description: modified librsvg to render SVG elements
 Version: @VERSION@
-Requires: glib-2.0 cairo
+Requires: glib-2.0 gdk-pixbuf-2.0 cairo
 Requires.private
 Libs: -L${libdir} -laltsvg
 Cflags: -I${includedir}/libaltsvg
