--- a/libaltsvg/data/Makefile.am
+++ b/libaltsvg/data/Makefile.am
@@ -3,7 +3,8 @@ pixmapdir = $(datadir)/pixmaps
 pixmap_DATA = 
 
 desktopentrydir = $(datadir)/applications/hildon
-desktopentry_DATA = inkface.desktop
+#desktopentry_DATA = inkface.desktop
+desktopentry_DATA = 
 
 EXTRA_DIST = \
 	$(pixmap_DATA) $(desktopentry_DATA)
