--- a/inkface/src/bindings/python/SConscript
+++ b/inkface/src/bindings/python/SConscript
@@ -18,13 +18,14 @@ env.ParseConfig("pkg-config --cflags --libs xext")
 env.AppendUnique(CPPPATH=[distutils.sysconfig.get_python_inc()])
 
 env.AppendUnique(CFLAGS=['-g'])
+env.AppendUnique(CFLAGS=['-Isrc/lib'])
 
-lib = env.SharedLibrary(target='inkface-python',
-                source=['inkface-python.c'])
+lib = env.SharedLibrary(target='inkface',
+                source=['inkface.c','#src/lib/common.c'])
 
 if type(lib) == type([]): lib = lib[0]
 
-env.Command('inkface.so','libinkface-python.so',
+env.Command('inkface.so','libinkface.so',
             [
                 Move("$TARGET","$SOURCE"),
             ])
