big change in reorg.
src/lib - defines a canvas object with new,init,paint,cleanup,... functions. It represents a C object encapsulating X backend. This is the common code for all bindings. 

The python bindings now define cairo surface object as official PycairoSurface objects, so they can be used with pycairo objects - haven't tested it yet.

pthread_cond_timewait was greatly flawed, because the mutex wasn't locked before waiting. 

Broken still - due to race condition that overwrites canvas->cobject.

--- a/inkface/src/bindings/python/SConscript
+++ b/inkface/src/bindings/python/SConscript
@@ -14,11 +14,13 @@ for i in range(len(vars)):
 
 env.ParseConfig("pkg-config --cflags --libs libaltsvg")
 env.ParseConfig("pkg-config --cflags --libs xext")
+env.ParseConfig("pkg-config --cflags --libs pycairo")
 
 env.AppendUnique(CPPPATH=[distutils.sysconfig.get_python_inc()])
 
 env.AppendUnique(CFLAGS=['-g'])
 env.AppendUnique(CFLAGS=['-Isrc/lib'])
+env.AppendUnique(CFLAGS=['-DDOUBLE_BUFFER'])
 
 lib = env.SharedLibrary(target='inkface',
                 source=['inkface.c','#src/lib/common.c'])
