There are two different ways of instantiating python objects. Using tp_alloc mechanism and using PyObject_New mechanism. Both mechanisms were tested during this changeset.
More importantly "canvas" objects now will be create by factory method and the method will ensure that it is a singleton object. For canvas based on X backend create_X_canvas method is introduced here. In future there can be create_clutter_canvas.

The canvas destructor can be used as an implicit cleanup routine and we may not require an explicit canvas cleanup. The cobject's cleanup is invoked from canvas destructor and this cleanup routine should take care of proper pthread_join before cleaning up the resources.

Some more ASSERTs were added.

--- a/inkface/src/bindings/python/SConscript
+++ b/inkface/src/bindings/python/SConscript
@@ -22,6 +22,8 @@ env.AppendUnique(CFLAGS=['-g'])
 env.AppendUnique(CFLAGS=['-Isrc/lib'])
 env.AppendUnique(CFLAGS=['-DDOUBLE_BUFFER'])
 
+#env.AppendUnique(LINKFLAGS=['-lefence'])
+
 lib = env.SharedLibrary(target='inkface',
                 source=['inkface.c','#src/lib/common.c'])
 
