--- a/libaltsvg/debian/control.in
+++ b/libaltsvg/debian/control.in
@@ -6,5 +6,5 @@ Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.6.0
 
 Package: libaltsvg
-Architecture: armel
+Architecture: @ARCH@
 Description: Modified version of librsvg to render SVG image components
