--- a/inkface/SConstruct
+++ b/inkface/SConstruct
@@ -19,7 +19,7 @@ env.AppendUnique(CFLAGS=['-g'])
 env.AppendUnique(CFLAGS=['-DDOUBLE_BUFFER'])
 
 if ARCH == 'armel':
-    env.AppendUnique(CFLAGS=['-DHAS_XSP'])
+    #env.AppendUnique(CFLAGS=['-DHAS_XSP'])
     env.ParseConfig("pkg-config --cflags --libs xsp")
 
 env.ParseConfig("pkg-config --cflags --libs libaltsvg")
