Add dependencies for libaltsvg. update changelog for 0.1.2 release. bump up version of libaltsvg.

--- a/libaltsvg/debian/control.in
+++ b/libaltsvg/debian/control.in
@@ -7,4 +7,5 @@ Standards-Version: 3.6.0
 
 Package: libaltsvg
 Architecture: @ARCH@
+Depends: libcairo2 (>= 1.4.10-0osso3), libxml2 (>= 2.6.27)
 Description: Modified version of librsvg to render SVG image components
